--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <link href="css/MDstyles.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
     
     <link rel="icon" type="image/png" href="images/main_logo.svg">
     <link href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;700&display=swap" rel="stylesheet">
