--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
 
 <body>
     <!--
+    jquery might be used by laodnavbar
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     it seems that these scripts are not even used
     -->
     
-    <script src="/js/9x9puzzles.js"></script>
+    <script src="9x9puzzles.js"></script>
     
     <script> 
         document.addEventListener('DOMContentLoaded', function(){
