--- a/index.html
+++ b/index.html
@@ -30,23 +30,20 @@
 </head>
 
 <body>
-    <!--
-    jquery might be used by laodnavbar
+    <!-- --->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    it seems that these scripts are not even used
+    <!--it seems that these scripts are not even used-->
     
     
     <script src="9x9puzzles.js"></script>
-    was breaking my code
     <script> 
         document.addEventListener('DOMContentLoaded', function(){
             loadNavbar();
             loadFooter();
         });
     </script>
-    -->
 
     <div class="body-container">
         <!-- Navbar -->
