--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     -->
     
     <link href="index.css" rel="stylesheet">
-
+    <link href="navbar.css" rel="stylesheet">
+    
     <link rel="icon" type="image/png" href="images/main_logo.svg">
     <link href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
